# python-xasm

./: .gitignore  .pre-commit-config.yaml  ChangeLog  ChangeLog-spell-corrected.diff  HOW-TO-USE.rst  MANIFEST.in  Makefile  NEWS.md  README.rst  __pkginfo__.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tasm.py  tasm.pyasm  tasm2.pyasm  xasm.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
admin-tools/: check-3.6-3.10-versions.sh  check-newest-versions.sh  check-versions.sh  checkout_common.sh  how-to-make-a-release.md  install-all-3.6-3.10.sh  install-all-3.8-3.10.sh  install-all-newest.sh  make-dist-3.6-3.10.sh  make-dist-3.8-3.10.sh  make-dist-newest.sh  make-dist.sh  merge-for-3.6.sh  pyenv-3.6-3.10-versions  pyenv-newest-versions  pyenv-versions  setup-master.sh  setup-python-3.6.sh  test-versions.sh
pytest/: .gitignore  test_assemble.py  test_write_pyc.py
test/: .gitignore  Makefile  TODO.md  columnize.py  comp.py  compile-file.py  fn-2.6.pyasm  fn-2.7.pyasm  fn-3.4.pyasm  fn.py  gcd-2.2.pyasm  gcd-2.3.pyasm  gcd-2.4.pyasm  gcd-2.5.pyasm  gcd-2.7.pyasm  gcd-3.3.pyasm  gcd-3.4.pyasm  gcd-3.5.pyasm  gcd-3.6.pyasm  gcd-3.7.pyasm  gcd-3.8.pyasm  gcd.py  multi-assign-2.7.pyasm  multi-assign.py  multi-assign2-2.7.pyasm  run-test.py  tasm-2.5.pyasm  tasm-2.6.pyasm  tasm-3.10-bad.pyasm  tasm-3.10.pyasm  tasm-3.4.pyasm  tasm-3.5.pyasm  tasm-3.6.pyasm  tasm.py  tasm3-3.4.pyasm  test_all.py
xasm/: .gitignore  __init__.py  assemble.py  cli.py  convert26-27.py  misc.py  pyc_convert.py  pythonfile.py  version.py  write_pyc.py  xasm_cli.py
(+4 files in other folders)
