[build-system]
requires = [
    "setuptools",
]

build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Rocky Bernstein",	email = "rb@dustyfeet.com"},
]

name = "xasm"
description = "Cross-version Python bytecode assembler"
dependencies = [
    "click",
    "xdis >= 6.1.8, < 6.3.0",
]
readme = "README.rst"
license = "GPL-2.0"
keywords = ["Python bytecode", "bytecode", "disassembler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/rocky/python-xasm"
Downloads = "https://github.com/rocky/python-xasm/releases"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "isort",
    "pytest",
]

[project.scripts]
pyc-xasm = "xasm.xasm_cli:main"

[tool.setuptools]
packages = [
    "xasm",
]

[tool.setuptools.dynamic]
version = {attr = "xasm.version.__version__"}

[tool.pyright]
include = ["xasm"]
# exclude = []
ignore = ["dist", "docs", "tmp", ".cache"]
